--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pyyaml (>=6.0.2,<7.0.0)",
     "pydantic (>=2.10.6,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "selenium (>=4.28.1,<5.0.0)"
 ]
 package-mode = false
 
